; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_monitor_break_PC.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_monitor_break_PC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MONITOR_break_addr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"PC breakpoint disabled\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Breakpoint set at PC=%04X\0A\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"Breakpoint is at PC=%04X\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @monitor_break_PC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @monitor_break_PC() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @get_hex(i32* @MONITOR_break_addr)
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %17

5:                                                ; preds = %0
  %6 = load i32, i32* @MONITOR_break_addr, align 4
  %7 = icmp sge i32 %6, 53248
  br i1 %7, label %8, label %13

8:                                                ; preds = %5
  %9 = load i32, i32* @MONITOR_break_addr, align 4
  %10 = icmp sle i32 %9, 55295
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %16

13:                                               ; preds = %8, %5
  %14 = load i32, i32* @MONITOR_break_addr, align 4
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %13, %11
  br label %20

17:                                               ; preds = %0
  %18 = load i32, i32* @MONITOR_break_addr, align 4
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @get_hex(i32*) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
